# sensorsafrica

./: .gitignore  LICENSE
processingservice/: pyproject.toml
processingservice/processingservice/awsadapters/: common.py  config.py  db.py  interfaces.py  loaders.py  sender.py  sqs_consumer.py  utils.py
processingservice/processingservice/data/: parameters.py  records.py
processingservice/processingservice/data/clients/air/: api.py
processingservice/processingservice/data/clients/weather/: api.py
processingservice/processingservice/data/transforms/: dataset.py  getters.py  split.py  utils.py
processingservice/processingservice/inference/: base.py  dummy.py  enums.py  loaders.py  models.py  process.py  queues_handlers.py  run.py
processingservice/processingservice/jobs/: run_sqs_consumer.py
webapp/backend/: .env.template  .gitignore  Dockerfile  README.md  package.json
webapp/backend/src/: app.module.ts  main.ts
webapp/backend/src/auth/: auth.guard.ts  verifier.ts
webapp/backend/src/constants/: file.ts
webapp/backend/src/modules/process/: process.controller.ts  (+2 more)
webapp/backend/src/types/: request.ts  response.ts
webapp/backend/src/utils/: file.ts
webapp/frontend/: .eslintrc.js  Dockerfile  Makefile  README.md  package-lock.json  package.json
webapp/frontend/public/: index.html
webapp/frontend/src/: index.tsx
webapp/frontend/src/Components/: footer.css  footer.tsx
webapp/frontend/src/services/: authentication.ts  base.ts  process.ts
webapp/frontend/src/types/: user.ts
webapp/frontend/src/utils/: authentication.ts  user.ts
(+12 files in other folders)
