[tool.poetry]
name = "processingservice"
version = "0.1.0"
description = ""
authors = ["mkarpicz <maciej.karpicz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.33.8"
pydantic = "^2.5.2"
pyhumps = "^3.8.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
